--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -126,7 +126,7 @@ Donde se introduce el parámetro para la razón de masa $q = \frac{m_2}{m_1}$. E
 varios trabajos las componentes de un sistema binario son identificados de tal
 manera que $q \leq 1$; sin embargo, esta convención no suele ser conveniente al
 momento de crear un modelo del sistema (por ejemplo,
-\autocite{ding_fast_derivation_cbs_params_2022}), en donde se permite que $q >
+\citeyearparen{ding_fast_derivation_cbs_params_2022}), en donde se permite que $q >
 1$ al asignar la componente primaria basado en parámetros orbitales en vez de
 sus masas.
 
@@ -349,7 +349,7 @@ binarios cuya órbita es circular y sincrónica. Esto excluye los sistemas con
 órbitas excéntricas y/o asincrónicas, incluyendo sistemas binarios en contacto
 cuyas propiedades no pueden ser adecuadamente modeladas en este paradigma
 \citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}.
-\autocite{wilson_eccentric_1979} generaliza el modelo de Roche a este tipo de
+\citeyearparen{wilson_eccentric_1979} generaliza el modelo de Roche a este tipo de
 órbitas, llegando a la siguiente expresión:
 
 \begin{eqfloat}[!ht]
@@ -496,7 +496,7 @@ Lagrange.
 	= m_2 / m_1 = 0.25$. Se pueden apreciar los cinco puntos de
 	Lagrange\textemdash \textit{L1}- \textit{L5}\textemdash que resultan del
 	campo del potencial $\Omega$. Figura obtenida de
-	\autocite{ibanez_cvs_wide_field_surveys_2021}.}
+	\citeyearparen{ibanez_cvs_wide_field_surveys_2021}.}
 	\label{figuraLagrange}
 \end{figure}
 
@@ -620,7 +620,7 @@ mostrando variabilidad despreciable en casos de variabilidad elipsoidal (en el
 caso que las componentes no sean esferas perfectas debido a una leve distorsión
 por el potencial gravitacional) o en caso del calentamiento superficial de una
 componente por la radiación incidente de su compañera
-\autocite{samus_gcvs_variable_types_2016}. Existen sistemas con un rango amplio
+\citeyearparen{samus_gcvs_variable_types_2016}. Existen sistemas con un rango amplio
 de periodos orbitales, desde 4 horas hasta más de 25 años. Una curva de luz
 típica de un sistema \textit{EA} se puede apreciar en la
 \reffigure{figuraEACurvaLuz}.
@@ -630,7 +630,7 @@ típica de un sistema \textit{EA} se puede apreciar en la
 	\includegraphics[scale=0.6]{Introduccion/Figures/Figura EA Curva_Modelling of WUMa Stars.png}
 	\caption{Curva de luz emblemática de un sistema eclipsante
 	\textit{EA}. Obtenida de
-	\autocite{skelton_modelling_wuma_variable_stars_2009}.}
+	\citeyearparen{skelton_modelling_wuma_variable_stars_2009}.}
 	\label{figuraEACurvaLuz}
 \end{figure}
 
@@ -646,14 +646,14 @@ una estrella esférica, esta área es constante en el tiempo, pero en el caso de
 una estrella elipsoidal la cantidad de área observada depende de la fase orbital
 actual. Esto resulta en eclipses sin un comienzo y fin claramente delimitados.
 En la mayoría de los casos el periodo orbital de este tipo de sistemas es mayor
-de 1 día \autocite{samus_gcvs_variable_types_2016}. 
+de 1 día \citeyearparen{samus_gcvs_variable_types_2016}. 
 
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[scale=0.63]{Introduccion/Figures/Figura EB Curva_Modelling of WUMa Stars.png}
 	\caption{Curva de luz emblemática de un sistema eclipsante
 	\textit{EB}. Obtenida de
-	\autocite{skelton_modelling_wuma_variable_stars_2009}.}
+	\citeyearparen{skelton_modelling_wuma_variable_stars_2009}.}
 	\label{figuraEBCurvaLuz}
 \end{figure}
 
@@ -666,7 +666,7 @@ sistemas semi-separados, ambas componentes de sistemas tipo \textit{EW} están
 altamente acopladas una a otra, la diferencia de temperaturas siendo del orden
 de cientos de Kelvin\textemdash lo cual es evidente por la profundidad de ambos
 eclipses\textemdash de tipo espectral A-K
-\autocite{skelton_modelling_wuma_variable_stars_2009}. El periodo orbital es
+\citeyearparen{skelton_modelling_wuma_variable_stars_2009}. El periodo orbital es
 menor de 1 día, del orden de unas cuantas horas, debido a su corta aproximación
 física. La envoltura común que comparten las estrellas es de una forma
 irregular; esta consiste de las superficies elipsoidales de las estrellas y del
@@ -684,9 +684,9 @@ viendo una cantidad similar de superficie estelar. Este fenómeno observacional
 es denominado el \textit{efecto O'Connell}. A pesar de que aún no es muy bien
 entendido la causa de este efecto, una de las interpretaciones más populares en
 la literatura es la presencia de manchas estelares
-[\autocite{ding_fast_derivation_cbs_params_2022}
-\autocite{michel_photometric_study_contact_binary_2023}
-\autocite{michel_rotse1_new_wuma_eclipsing_binary_2016}], las cuales al ser más
+[\citeyearparen{ding_fast_derivation_cbs_params_2022}
+\citeyearparen{michel_photometric_study_contact_binary_2023}
+\citeyearparen{michel_rotse1_new_wuma_eclipsing_binary_2016}], las cuales al ser más
 frías que el resto de la superficie llega a manifestar como una menor cantidad
 de radiación emitida por el sistema en ciertas fases. Esto se atribuye a la
 actividad magnética de la estrella, y se utiliza principalmente al momento de
@@ -697,6 +697,6 @@ ajustar un modelo computacional a la curva de luz observada.
 	\includegraphics[scale=0.63]{Introduccion/Figures/Figura EW Curva_Modelling of WUMa Stars.png}
 	\caption{Curva de luz emblemática de un sistema eclipsante
 	\textit{EW}. Obtenida de
-	\autocite{skelton_modelling_wuma_variable_stars_2009}.}
+	\citeyearparen{skelton_modelling_wuma_variable_stars_2009}.}
 	\label{figuraEWCurvaLuz}
 \end{figure}
