--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -34,7 +34,7 @@ color por diferencia de magnitud se determina un solo valor de $m_0$ con el cual
 convertir las magnitudes; este $m_0$ corresponde a la magnitud en 0.25 de fase
 del pasa bandas más tenue del sistema. PHOEBE tablas de coeficientes que
 relacionan la temperatura efectiva del sistema binario con la diferencia de
-flujos. \brakcite{phoebeScientificReference} 
+flujos. \citeyearparen{phoebeScientificReference} 
 
 En este trabajo se dividieron las curvas de luz de \atoObjId basado en su
 fuente: las de Gaia ($G, G_{BP}, G_{RP}$), las de ZTF ($ZTF:G, ZTF:R$), y la de
