--- a/Muestra/Secciones/ATO_Objeto.tex
+++ b/Muestra/Secciones/ATO_Objeto.tex
@@ -1,6 +1,6 @@
 \section{ATO J339.9469+45.1464 - EclBin\_Candidate}
 
-\autocite{atlasATOObjectDiscovery} es un estudio donde se realizó una búsqueda de
+\citeyearparen{atlasATOObjectDiscovery} es un estudio donde se realizó una búsqueda de
 estrellas variables dentro del catálogo del \textbf{Asteroid Terrestrial-impact
 Last Alert System} (\textbf{ATLAS}), aprovechando su cobertura de
 aproximadamente \num{13000} $\mathrm{deg}^2$ al menos 4 veces por noche. Esta
@@ -39,7 +39,7 @@ temperaturas de las estrellas individuales.
 	\caption{Magnitud de \atoObjId registrada en la base de datos de Gaia DR3.
 	Se puede apreciar la variabilidad de aproximadamente 0.5 mag en el brillo
 	del sistema, la cual la atribuimos a la presencia de eclipses en el sistema
-	binario. \autocite{gdr3ReleaseDocumentation}}
+	binario. \citeyearparen{gdr3ReleaseDocumentation}}
 	\label{gdr3AtoObjLightCurves}
 \end{figure}
 
