--- a/Muestra/Secciones/Catalogos.tex
+++ b/Muestra/Secciones/Catalogos.tex
@@ -12,7 +12,7 @@ denominado como \gaiaNoSpace, ubicado en el punto de Lagrange L2 con respecto al
 sistema Sol-Tierra. Desde este punto la nave tiene una vista sin obstrucciones
 que le permite observar una cantidad de estrellas enorme, con \textapproxtilde
 1,000 millones de fuentes visibles con los instrumentos del satélite
-\gaiaNoSpace. \autocite{gaiaMission}
+\gaiaNoSpace. \citeyearparen{gaiaMission}
 
 \subsection{Fotometría}
 
@@ -24,7 +24,7 @@ procesando. Estos son conocidos como los \textbf{Data Releases}. Este trabajo se
 basa en el \textbf{Data Release 2}, el cuál de ahora en adelante será denominado
 simplemente \textbf{GDR2}. Este catálogo está compuesto de las observaciones
 hechas por \gaia entre las fechas de 25 de Julio del 2014 y el 23 de Mayo del
-2016, un periodo de tiempo de 22 meses en total. \autocite{gaiaDr2} GDR2 consiste
+2016, un periodo de tiempo de 22 meses en total. \citeyearparen{gaiaDr2} GDR2 consiste
 de \num{1692919135} de fuentes individuales. Existe una gran diversidad de objetos
 dentro de este catálogo, desde estrellas de secuencia principal, asteroides
 dentro del sistema solar, hasta estrellas variables en las regiones más lejanas
@@ -55,7 +55,7 @@ espectroscópicos.
 
 El instrumento principal utilizado es el telescopio de 2.5m, ubicado en el
 observatorio \textit{Apache Point Observatory}, descrito a detalle en
-\autocite{sdss2_5mTelescope}. Este telescopio de diseño de Ritchey-Chrétien
+\citeyearparen{sdss2_5mTelescope}. Este telescopio de diseño de Ritchey-Chrétien
 alimenta dos instrumentos separados; una CCD multi-banda de ancha área, y un par
 de espectrógrafos alimentados por fibra óptica. Su construcción empezó en 1998,
 pero no fue hasta el año 2000 que estuvo operacional.
