--- a/Muestra/Secciones/SzkodySearchSDSS.tex
+++ b/Muestra/Secciones/SzkodySearchSDSS.tex
@@ -12,7 +12,7 @@ variables cataclísmicas en nuestra galaxia, en particular obteniendo muestras d
 poblaciones históricamente imperceptibles a nuestros instrumentos.
 
 Para restringir los sistemas que buscar, Szkody y colaboradores aplicaron un
-criterio de color basado en el trabajo de \autocite{krisciunas1998SdssCriteria}, en
+criterio de color basado en el trabajo de \citeyearparen{krisciunas1998SdssCriteria}, en
 el cual lograron determinar concentraciones de diferentes tipos de objetos
 utilizando diagramas de color-color. A pesar de haber hecho estas observaciones
 antes del año de lanzamiento de SDSS, Krisciunas y colaboradores lograron
@@ -51,6 +51,6 @@ la concentración de los objetos en el diagrama color-color, vistos en la figura
 	\caption{Variables cataclísmicas identificadas y observadas por Szkody y
 		colaboradores (círculos negros fuertes). Se puede apreciar la separación
 		de las variables cataclísmicas del locus estelar, vista en los puntos
-		negros. \autocite{szkody2002CvSearchSdss}}
+		negros. \citeyearparen{szkody2002CvSearchSdss}}
 	\label{szkody2002ColorColorVCs}
 \end{figure}
